--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         }
     </style>
 </head>
-<body style="padding:0; margin: 0; background: #FF00FF;">
-<canvas id="gameCanvas" width="1280" height="800"></canvas>
+<body style="padding:0; margin: 0; background: #000000;">
+<canvas id="gameCanvas" width="2560" height="1544"></canvas>
 <script src="frameworks/cocos2d-html5/CCBoot.js"></script>
 <script src="main.js"></script>
 </body>
